5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1838_2602.log
== TEST (2019-06-24 12:36:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("X,Y,Z: ")))
y = array([[2,1,4],[1,2,0],[2,3,2]])
z = dot(inv(y), x.T)
print("Estafilococo: ", round(preco[0], 1))
print("Salmonela: ", round(preco[1], 1))
print("Coli: ", round(preco[2], 1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:36:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("X,Y,Z: ")))
y = array([[2,1,4],[1,2,0],[2,3,2]])
z = dot(inv(y), x.T)
print("Estafilococo: ", round(z[0], 1))
print("Salmonela: ", round(z[1], 1))
print("Coli: ", round(z[2], 1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:39:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("X,Y,Z: ")))
y = array([[2,1,4],[1,2,0],[2,3,2]])
z = dot(inv(y), x.T)
print("Estafilococo: ", round(z[0], 1))
print("Salmonela: ", round(z[1], 1))
print("Coli: ", round(z[2], 1))
if (z[0] == max(z)):
	print("Estafilococo")
elif(z[1] == max(z)):
	print("Salmonela")
	else:
		print("Coli")
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:39:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("X,Y,Z: ")))
y = array([[2,1,4],[1,2,0],[2,3,2]])
z = dot(inv(y), x.T)
print("Estafilococo: ", round(z[0], 1))
print("Salmonela: ", round(z[1], 1))
print("Coli: ", round(z[2], 1))
if (z[0] == max(z)):
	print("Estafilococo")
elif(z[1] == max(z)):
	print("Salmonela")
else:
	print("Coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:40:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("X,Y,Z: ")))
y = array([[2,1,4],[1,2,0],[2,3,2]])
z = dot(inv(y), x.T)
print("Estafilococo: ", round(z[0], 1))
print("Salmonela: ", round(z[1], 1))
print("Coli: ", round(z[2], 1))
if (z[0] == max(z)):
	print("Estafilococo")
elif(z[1] == max(z)):
	print("Salmonela")
else:
	print("Coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:40:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("X,Y,Z: ")))
y = array([[2,1,4],[1,2,0],[2,3,2]])
z = dot(inv(y), x.T)
print("Estafilococo: ", round(z[0], 1))
print("Salmonela: ", round(z[1], 1))
print("Coli: ", round(z[2], 1))
if (z[0] == min(z)):
	print("Estafilococo")
elif(z[1] == min(z)):
	print("Salmonela")
else:
	print("Coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 12:41:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("X,Y,Z: ")))
y = array([[2,1,4],[1,2,0],[2,3,2]])
z = dot(inv(y), x.T)
print("Estafilococo: ", round(z[0], 1))
print("Salmonela: ", round(z[1], 1))
print("Coli: ", round(z[2], 1))
if (z[0] == min(z)):
	print("Estafilococo")
elif(z[1] == min(z)):
	print("Salmonela")
else:
	print("Coli")
-- EXECUTION TIME:
1.14166
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
Estafilococo:  1923.4
Salmonela:  1864.5
Coli:  -439.0
Coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
Estafilococo:  -31711.0
Salmonela:  16783.4
Coli:  12183.6
Estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
Estafilococo:  22647.2
Salmonela:  -9717.3
Coli:  -6745.3
Salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:41:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("X,Y,Z: ")))
y = array([[2,1,4],[1,2,0],[2,3,2]])
z = dot(inv(y), x.T)
print("estafilococo: ", round(z[0], 1))
print("salmonela: ", round(z[1], 1))
print("coli: ", round(z[2], 1))
if (z[0] == min(z)):
	print("estafilococo")
elif(z[1] == min(z)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 12:42:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("X,Y,Z: ")))
y = array([[2,1,4],[1,2,0],[2,3,2]])
z = dot(inv(y), x.T)
print("estafilococo: ", round(z[0], 1))
print("salmonela: ", round(z[1], 1))
print("coli: ", round(z[2], 1))
if (z[0] == min(z)):
	print("estafilococo")
elif(z[1] == min(z)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.31037
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
